Fixes @mentions popup cut off on compose box
https://trello.com/c/wMihfhZT

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -703,6 +703,7 @@
 			padding: 0 10px 10px 10px !important;
 			.message-input {
 				min-height: 100px;
+				max-width: calc(100vw - 82px) !important;
 			}
 			.plus {
 				display: none;
@@ -2493,9 +2494,7 @@
 		padding: 0 10px 10px 10px;
 		// padding: 0 25px 25px 25px;
 		position: relative;
-		overflow-x: hidden;
 		max-height: 100vh !important;
-		overflow-y: auto !important;
 		max-width: auto;
 		.tab-group {
 			margin-bottom: 10px;
